@@ -1,3 +1,3 @@
-mobac.version=1.8 beta 4
+mobac.version=1.8 RC 1
 mobac.revision.hide=false
 mobac.updateurl=http://mobac.dnsalias.org/mapsources-update/v1/mapsources.properties
