@@ -31,7 +31,7 @@ import java.util.Map;
 import mobac.mapsources.DefaultMapSourcesManager;
 import mobac.mapsources.MapSourcesManager;
 import mobac.mapsources.MapSourcesUpdater;
-import mobac.mapsources.impl.MiscMapSources.Navitel;
+import mobac.mapsources.impl.Microsoft.MicrosoftOrdnanceSurveyExplorer;
 import mobac.program.Logging;
 import mobac.program.download.TileDownLoader;
 import mobac.program.model.EastNorthCoordinate;
@@ -55,7 +55,8 @@ public class MapSourceTypeDetector {
 		DefaultMapSourcesManager.initialize();
 		MapSourcesManager.getInstance().getAllMapSources();
 		MapSourcesUpdater.loadMapSourceProperties();
-		testMapSource(Navitel.class);
+		
+		testMapSource(MicrosoftOrdnanceSurveyExplorer.class);
 	}
 
 	public static void testMapSource(Class<? extends MapSource> mapSourceClass) {
